[package]
name = "camview"
version = "0.1.0"
description = "Viewport for OTH webcam"
authors = ["Xentec <xentec@aix0.eu>"]
license = "GPL-2.0-only"
edition = "2021"
build = "build.rs"

[features]
default = ["qt"]
qt = ["slint/backend-qt"]
x11 = ["slint/backend-gl-x11"]
wayland = ["slint/backend-gl-wayland"]

[build-dependencies]
slint-build = "^0.2"

[dependencies]
# Quality of Life
anyhow = "^1"

# Interface
clap = { version = "^3", default-features = false, features = ["std", "derive"] }
slint = { version = "^0.2", default-features = false, features = ["std", "compat-0-2-0"] }

# Data
image = { version = "^0.24", default-features = false, features = ["jpeg_rayon"] }
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
serde = { version = "^1", features = ["derive"] }
sys-locale ="^0.1"

# I/O
futures-util = "^0.3"
tokio = { version = "^1", features = ["io-util","time"] }
reqwest = { version = "^0.11", default-features = false, features = ["json","trust-dns"] }

# Logging
tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = "debuginfo"
lto = "thin"

[patch."crates-io"]
#slint = { git = "https://github.com/slint-ui/slint" }
#slint-build = { git = "https://github.com/slint-ui/slint" }
