[package]
name = "camview"
version = "0.1.0"
description = "Viewport for OTH webcam"
authors = ["Xentec <xentec@aix0.eu>"]
license = "GPL-2.0-only"
edition = "2021"
build = "build.rs"

[features]
default = ["qt"]
qt = ["slint/backend-qt"]
wayland = ["slint/backend-winit-wayland", "slint/renderer-winit-skia-opengl"]
x11 = ["slint/backend-winit-x11", "slint/renderer-winit-skia-opengl"]

[build-dependencies]
slint-build = "^1"

[dependencies]
# Quality of Life
anyhow = "^1"
num_enum = "0.6"
itertools = "0.11"

# Interface
clap = { version = "^4", default-features = false, features = ["std", "derive", "help"] }
slint = { version = "^1", default-features = false, features = ["std", "compat-1-0"] }

# Data
image = { version = "^0.24", default-features = false, features = ["jpeg_rayon"] }
chrono = { version = "^0.4", features = ["serde", "unstable-locales"] }
serde = { version = "^1", features = ["derive"] }
sys-locale = "^0.3"

# I/O
futures-util = "^0.3"
tokio = { version = "^1", features = ["io-util","time"] }
reqwest = { version = "^0.11", default-features = false, features = ["json","trust-dns","default-tls"] }

# Logging
tracing = { version = "^0.1", features = ["log", "release_max_level_debug"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
strip = "debuginfo"
lto = "thin"

[patch."crates-io"]
#slint = { git = "https://github.com/slint-ui/slint" }
#slint-build = { git = "https://github.com/slint-ui/slint" }
